--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,11 @@
-$color-bg: #e5e5e5;
-$color-bg-alter: #9f9f9f;
+$color-bg: #f6f3f3;
+$color-bg-alter: #eceaea;
+$color-border: #e1e1e1;
 $color-fg: #343030;
+$color-fg-placeholder: #9f9f9f;
+$color-fg-inverted: #fff;
 $color-interactive: #382e2b;
 $color-accent: #5b3a32;
+$color-btn: #403432;
+$color-hover: #776763;
+$color-disabled: #c1b4b1;
