--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,53 @@
 @import './_mixins.scss';
 @import './_utils.scss';
 @import './_variables.scss';
+@import './fonts.scss';
+
+h1 {
+  margin-top: 0;
+  font-family: Merriweather, "Times New Roman", serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+h2 {
+  margin-top: 0;
+  font-family: Merriweather, "Times New Roman", serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+}
+
+h3 {
+  margin-top: 0;
+  font-family: Merriweather, "Times New Roman", serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+h4 {
+  margin-top: 0;
+  font-family: Merriweather, "Times New Roman", serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+h5 {
+  margin-top: 0;
+  font-family: Merriweather, "Times New Roman", serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+h6 {
+  margin-top: 0;
+  font-family: Merriweather, "Times New Roman", serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 21px;
+}
+
