--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -12,7 +12,7 @@
   box-sizing: border-box;
   width: 100%;
   max-width: 1248px;
-  min-width: 1200px;
+  min-width: calc(1200px - calc(100vw - 100%));
   margin: 0 auto;
   padding: 0 16px;
 }
