--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,5 @@
 $color-bg: #f6f3f3;
 $color-bg-alter: #eceaea;
-$color-border: #e1e1e1;
 $color-fg: #343030;
 $color-fg-placeholder: #9f9f9f;
 $color-fg-inverted: #fff;
@@ -9,3 +8,7 @@ $color-accent: #5b3a32;
 $color-btn: #403432;
 $color-hover: #776763;
 $color-disabled: #c1b4b1;
+$color-border: #e1e1e1;
+$color-border-active: #b5b5b5;
+$color-picture-border: #e7e7e7;
+$scrollbar-width: calc(100vw - 100%);
