--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
-@import './_mixins.scss';
-@import './_utils.scss';
-@import './_variables.scss';
+@import './mixins.scss';
+@import './utils.scss';
+@import './variables.scss';
 @import './fonts.scss';
 
 h1 {
